--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,14 @@
             <version>5.1.18</version>
         </dependency>
         <!-- mysql #-->
+
+        <!-- junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+        </dependency>
+        <!-- junit #-->
     </dependencies>
 
 
