--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,6 @@
             <artifactId>mybatis</artifactId>
             <version>3.2.7</version>
         </dependency>
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis-spring</artifactId>
-            <version>1.2.2</version>
-        </dependency>
         <!-- mybatis # -->
 
         <!-- mysql -->
@@ -35,13 +30,18 @@
         </dependency>
         <!-- mysql #-->
 
-        <!-- junit -->
+        <!-- junit、gson-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.10</version>
         </dependency>
-        <!-- junit #-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.4</version>
+        </dependency>
+        <!-- junit、gson #-->
     </dependencies>
 
 
